fix custom header function & beaver builder CSS tweak on last paragraph spacing

--- a/style.css
+++ b/style.css
@@ -1507,6 +1507,10 @@ Beaver Builder Full Width
 	display: none;
 }
 
+.fl-rich-text p:last-of-type {
+	margin-bottom: 0;
+}
+
 
 @media only screen and (min-width: 768px) {
 	.fl-builder .site-inner {
